--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,6 @@ owner: HDVinnie # Your GitHub organization or username, where this repository li
 repo: TrackerHub # The name of this repository
 
 sites:
-  - name: AnimeBytes
-    url: $AB
-    icon: $AB_ICON
-    maxResponseTime: 1000
   - name: Aither
     url: $AIH
     icon: $AIH_ICON
@@ -15,9 +11,17 @@ sites:
     url: $AR
     icon: $AR_ICON
     maxResponseTime: 1000
+  - name: AnimeBytes
+    url: $AB
+    icon: $AB_ICON
+    maxResponseTime: 1000
   - name: Anthelion
     url: $ATH
     icon: $ATH_ICON
+    maxResponseTime: 1000
+  - name: AsianCinema
+    url: $ACM
+    icon: $ACM_ICON
     maxResponseTime: 1000
   - name: BeyondHD
     url: $BHD
