--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -105,6 +105,10 @@ sites:
     url: $TLY
     icon: $TLY_ICON
     maxResponseTime: 1000
+  - name: TV-Vault
+    url: $TVV
+    icon: $TVV_ICON
+    maxResponseTime: 1000
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
