--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -117,6 +117,10 @@ sites:
     url: $TVV
     icon: $TVV_ICON
     maxResponseTime: 1000
+  - name: UHDBits
+    url: $UHD
+    icon: $UHD_ICON
+    maxResponseTime: 1000
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
